--- a/vip-desigin/pom.xml
+++ b/vip-desigin/pom.xml
@@ -6,4 +6,33 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>vip-desigin</artifactId>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<!-- dependency versions -->
+		<spring.version>5.0.2.RELEASE</spring.version>
+	</properties>
+	
+	<dependencies>
+		<!-- spring framework start -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-nodep</artifactId>
+			<version>2.2</version>
+		</dependency>
+	
+	</dependencies>
+  
+  
 </project>
