--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modules>
   	<module>vip-desigin</module><!-- 设计模式 -->
   	<module>gupaoedu-vip-spring-1.0</module><!-- 用300行代码手写提炼Spring的核心原理 -->
-  	<module>vip-zookeeper</module>
-  	<module>vip-distributed</module>
+  	<module>vip-zookeeper</module><!-- zookeeper -->
+  	<module>vip-distributed</module><!-- 分布式基础相关例子 -->
   </modules>
 </project>
