--- a/vip-distributed/pom.xml
+++ b/vip-distributed/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>hessian</artifactId>
 			<version>4.0.38</version>
 		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.10</version>
+		</dependency>
 		<!-- serialize序列化用到jar 结束 -->
 	</dependencies>
 </project>
