--- a/vip-distributed/pom.xml
+++ b/vip-distributed/pom.xml
@@ -19,6 +19,12 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+	    <dependency>
+	      <groupId>com.google.protobuf</groupId>
+	      <artifactId>protobuf-java</artifactId>
+	      <version>3.7.0</version>
+	    </dependency>
+		
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
@@ -45,5 +51,7 @@
 			<version>1.4.10</version>
 		</dependency>
 		<!-- serialize序列化用到jar 结束 -->
+		
+		
 	</dependencies>
 </project>
