--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,12 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-  	<module>vip-desigin</module><!-- 设计模式 -->
   	<module>gupaoedu-vip-spring-1.0</module><!-- 用300行代码手写提炼Spring的核心原理 -->
-  	<module>vip-zookeeper</module><!-- zookeeper -->
-  	<module>vip-distributed</module><!-- 分布式基础相关例子 -->
-  	<module>vip-dubbo</module><!-- dubbo -->
   	<module>vip-concurrent</module><!-- 多线程/并发-->
+  	<module>vip-desigin</module><!-- 设计模式 -->
+  	<module>vip-distributed</module><!-- 分布式基础相关例子 -->
+  	<module>vip-zookeeper</module><!-- zookeeper -->
+  	<module>vip-rpc</module><!-- 手写rpc -->
+  	<module>vip-dubbo</module><!-- dubbo -->
   </modules>
 </project>
