--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,9 @@
   	<module>vip-concurrent</module><!-- 多线程/并发-->
   	<module>vip-desigin</module><!-- 设计模式 -->
   	<module>vip-distributed</module><!-- 分布式基础相关例子 -->
-  	<module>vip-zookeeper</module><!-- zookeeper -->
-  	<module>vip-rpc</module><!-- 手写rpc -->
   	<module>vip-dubbo</module><!-- dubbo -->
+  	<module>vip-netty-io</module><!-- netty-io -->
+  	<module>vip-rpc</module><!-- 手写rpc -->
+  	<module>vip-zookeeper</module><!-- zookeeper -->
   </modules>
 </project>
