--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,11 @@
   	<module>vip-concurrent</module><!-- 多线程/并发-->
   	<module>vip-desigin</module><!-- 设计模式 -->
   	<module>vip-distributed</module><!-- 分布式基础相关例子 -->
+  	<module>vip-mq</module><!-- 消息队列相关例子 -->
   	<module>vip-dubbo</module><!-- dubbo -->
+  	<module>vip-nacos</module><!-- alibaba的nacos（动态服务发现、服务配置、服务元数据及流量管理）相当于zookeeper -->
   	<module>vip-netty-io</module><!-- netty-io -->
+  	<module>vip-redis</module><!-- redis -->
   	<module>vip-rpc</module><!-- 手写rpc -->
   	<module>vip-zookeeper</module><!-- zookeeper -->
   </modules>
