--- a/vip-mq/pom.xml
+++ b/vip-mq/pom.xml
@@ -27,6 +27,15 @@
 	</dependencyManagement>
 
 	<dependencies>
+	
+		<!-- 集成rocketmq开始 -->
+		<dependency>
+		  <groupId>org.apache.rocketmq</groupId>
+		  <artifactId>rocketmq-client</artifactId>
+		  <version>4.5.2</version>
+		</dependency>
+		<!-- 集成rocketmq结束 -->
+
 		<!-- spring kafka -->
 		<!-- <dependency>
 			<groupId>org.apache.kafka</groupId>
